<resources>

    <string name="app_name">Portals Navigation</string>
    <string name="update">Update Database</string>
    <string name="start">Start Navigation</string>
    <string name="about">About Author</string>
    <string name="namehint">Author:</string>
    <string name="name">Shunix</string>
    <string name="emailhint">Email:</string>
    <string name="email">admin@shunix.com</string>
    <string name="webhint">Website:</string>
    <string name="website">http://www.shunix.com</string>
    <string name="version">1.3.2</string>
    <string name="ok">OK</string>
    <string name="polist">Portals List:</string>
    <string name="curloc">Current location:</string>
    <string name="unknown">Unknown</string>
    <string name="range">Portals Within Range(km): </string>
    <string name="list">List</string>
    <string name="cancel">Cancel</string>
    <string name="nav">Navigation:</string>
    <string name="beijing">Beijing</string>
    <string name="shanghai">Shanghai (Includes Hangzhou, Suzhou, Nanjing, etc)</string>
    <string name="guangzhou">Guangzhou</string>
    <string name="chengdu">Chengdu</string>
    <string name="chongqing">Chongqing</string>
    <string name="wuhan">Wuhan</string>
    <string name="nanjing">Nanjing</string>
    <string name="xian">Xi\'an</string>

</resources>
