<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/beijing" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/chengdu" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/chongqing" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/guangzhou" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/nanjing" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/shanghai" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/wuhan" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/xian" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:text="@string/ok" />

    </LinearLayout>

</ScrollView>
